# george-careers-website

./: .replit  LICENSE  README.md  app.py  database.py  pyproject.toml
static/: career.avif
templates/: footer.html  home.html  jobitem.html  nav.html
